Add first implementation
- maps 26 States and DF to a timezone
- maps 16 Cities to a timezone
- tests for the main `getBrTimezone()` function
- setup `main` and `types` in `package.json`

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "license": "MIT",
   "author": "Aryel Mota Gois",
-  "main": "index.js",
+  "main": "dist/main.js",
+  "types": "dist/main.d.ts",
   "scripts": {
     "test": "tsc && ts-standard && jest",
     "build": "tsc --project tsconfig.build.json"
